samples/_failures_safe/1761160137_d04831_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86714e63.c: In function ‘main’:
./samples/SAFE/__tmp_86714e63.c:159:14: error: expected ‘;’ at end of input
  159 |             i
      |              ^
      |              ;
./samples/SAFE/__tmp_86714e63.c:159:13: error: expected declaration or statement at end of input
  159 |             i
      |             ^
./samples/SAFE/__tmp_86714e63.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_86714e63.c:159:13: error: expected declaration or statement at end of input
